# nc-video-converter

./: README.md
api-nc-video-converter/: .gitignore  Cargo.toml
api-nc-video-converter/src/: main.rs
architecture/api/tecnologies/: tecnologies.md
architecture/desktop/errors/: pending-errors.md
architecture/desktop/tecnologies/: tecnologies.md
architecture/developer/desktop/config/: merge-project-lit-tauri.md
architecture/web/tecnologies/: tecnologies.md
back-nc-video-converter/: Cargo.toml
desktop-nc-video-converter/: package-lock.json  package.json  vite.config.ts
desktop-nc-video-converter/src-tauri/: Cargo.toml  tauri.conf.json
desktop-nc-video-converter/src-tauri/src/: main.rs
desktop-nc-video-converter/src/assets/css/: global-styles.css
desktop-nc-video-converter/src/backend/: server.js
front-nc-video-converter/: index.html  package.json
front-nc-video-converter-js/: package-lock.json
front-nc-video-converter-ts/: index.html  package-lock.json  package.json  vite.config.js
front-nc-video-converter-ts/src/: my-element.ts
front-nc-video-converter-ts/src/layouts/: home-layout.ts  main-layout.ts
front-nc-video-converter-ts/src/router/: router.ts
frontend-nc-video-converter/: package-lock.json  package.json
frontend-nc-video-converter/src/backend/: server.ts
frontend-nc-video-converter/src/layouts/: home-layout.ts  main-layout.ts
frontend-nc-video-converter/src/router/: router.ts
web-nc-video-converter/: package-lock.json  package.json  tsconfig.json
web-nc-video-converter/src/contexts/: store-video-seleted.ts
(+42 files in other folders)
