[package]
name = "api-nc-video-converter"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["multipart"] }
tokio = { version = "1.49.0", features = ["full"] }

tower-http = { version = "0.6.8", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.21", features = ["v4"] }
